# sporos

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
benches/: memory_baseline.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/retry/: Cargo.toml
crates/runtime/: Cargo.toml
crates/sporos-system-test-support/: Cargo.toml
crates/sporos-system-test-support/src/: main.rs
docker/system/: README.md  compose.yml
docker/system/config/: sporos.toml.template
docker/system/fixtures/: README.md  manifest.json
docker/system/fixtures/media/qbittorrent-candidate/Sporos qBittorrent Candidate/: Sporos qBittorrent Fixture.mkv
docker/system/fixtures/media/qbittorrent/Sporos qBittorrent Fixture/: Sporos qBittorrent Fixture.mkv
docker/system/fixtures/media/rtorrent/Sporos rTorrent Fixture/Extras/: sample.txt
docker/system/fixtures/media/rtorrent/Sporos rTorrent Fixture/Season 01/: Sporos rTorrent Fixture S01E01.mkv
docker/system/fixtures/torrents/: qbittorrent-candidate.torrent  qbittorrent-source.torrent  rtorrent-candidate.torrent  rtorrent-source.torrent
docker/system/init/: seed.sh
docker/system/qbittorrent/: qBittorrent.conf
docker/system/secrets/: qbittorrent-password.template  sporos-api-token.template
docker/system/torznab/: nginx.conf
docker/system/torznab/www/: caps.xml  search.xml
docs/: autobrr.md  beads-state-snapshot.md  configuration.md  duroxide-programming-guide.md  notifications.md  release-checklist.md
docs/adr/: 0001-durable-announce-work-queue.md  0002-real-torrent-client-system-test.md  0003-transient-io-retry-policy.md  0004-duroxide-workflow-engine.md  0005-duroxide-testing-evaluation.md
docs/adrs/: 0001-durable-announce-work-queue.md  0002-service-first-runtime-and-configuration.md
docs/design/: duroxide-workflow-engine.md
docs/internal/: 09-runtime-concurrency-design.md  10-workspace-boundaries.md
docs/operators/: announce-queue.md  operator-guide.md
docs/operators/status-examples/: degraded-external-dependency.json  healthy.json  notification-degradation.json  worker-failure.json
examples/: generate_system_fixtures.rs
scripts/: system-test
scripts/ci/: cargo-gates  image-smoke  publish-forgejo-image
src/: actions.rs  announce.rs  api.rs  arr.rs  cli.rs  clients.rs  config.rs  content_filter.rs  daemon.rs  domain.rs  error.rs  errors.rs  http.rs  indexers.rs  integrations.rs  inventory.rs  inventory_refresh.rs  lib.rs  logging.rs  main.rs  matching.rs  memory.rs  metrics.rs  notifications.rs  operations.rs  persistence.rs  retry.rs  runtime.rs  scheduler.rs  search.rs  secrets.rs  startup.rs  time.rs  torrent.rs
src/actions/: tests.rs
src/clients/: deluge.rs  mod.rs  qbittorrent.rs  rtorrent.rs  runtime.rs  tests.rs  transmission.rs
src/integrations/: cache.rs  tests.rs
src/operations/: tests.rs  torrents.rs
src/persistence/: mod.rs  repository.rs  schema.rs  tests.rs  torrent_cache.rs
src/persistence/repository/: connection.rs  mod.rs  schema_setup.rs  tests.rs
src/runtime/: announce_worker.rs  app.rs  backoff.rs  daemon.rs  duroxide_workflow.rs  health.rs  injection_worker.rs  mod.rs  queue.rs  scheduler.rs  search.rs  shutdown.rs  workflow_contracts.rs
src/runtime/workflow/: activities.rs  contracts.rs  database.rs  inventory_completion.rs  mod.rs  orchestrations.rs  registry.rs  runtime.rs  tests.rs
src/search/: tests.rs  title.rs
tests/: container_packaging.rs  duroxide_runtime.rs  e2e_compatibility.rs  integration_fake_services.rs  memory_peak_gates.rs  product_identity.rs  state_compatibility.rs  system.rs  system_fixture_files.rs  system_torrent_clients.rs
tests/fixtures/memory/data-dir/Example.Show.S01/: Example.Show.S01E02.mkv
tests/fixtures/memory/rss/: torznab.xml
tests/fixtures/memory/search/: results.json
tests/fixtures/memory/torrents/: representative.torrent
tests/system/: fixture_files.rs  main.rs  torrent_clients.rs
