[package]
name = "sporos"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust compatibility rebuild of cross-seed behavior"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false }

[[bench]]
name = "memory_baseline"
harness = false

[workspace]
members = ["."]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[lints]
workspace = true
