[package]
name = "sporos-retry"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[dependencies]
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[lints]
workspace = true
