[package]
name = "sporos-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
