[package]
name = "sporos-system-test-support"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
clap = { version = "4.6.1", default-features = true, features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sporos = { path = "../.." }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
